fixed nav bar on mobile

--- a/style/navBar.css
+++ b/style/navBar.css
@@ -136,12 +136,14 @@ nav:hover {
   right: 0px;
   top: 9.9vh;
   width: 100%;
+  height: 40vh;
   z-index: 1000;
 }
 #mobile-link {
   align-items: center;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   padding: 20px;
 }
 #mobile-link a {
@@ -185,6 +187,9 @@ nav.toggled {
   border: 0px;
   #title {
     color: black;
+    .yellow {
+      color: black;
+    }
     img {
       opacity: 0;
       display: none;
